--- a/ApiLuisEjercicio2/appsettings.json
+++ b/ApiLuisEjercicio2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-48ETR59;Initial Catalog=EstudioLuis;Integrated Security=False; UID=sa;Password=g2s0t07.; TrustServerCertificate=True;"
+    "Default": "Server=DESKTOP-LECHF0E\\SQLEXPRESS;Initial Catalog=EstudioLuis;Integrated Security=False; UID=sa;Password=g2s0t07.; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
